# Curvelinear-trajectory-forecast

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
curvepath_sim/: app.py  config.py  gnc.py  otter.py  robot.py  ui.py
curvepath_sim/math/: __init__.py  curve_to_xy.py  xy_to_curve.py
data/: robot_position_log.xlsx
docs/diagrams/: Autonomous_Docking_DCA.gv
scripts/: flow_chart.py  generate_screenshot.py  legacy_gui.py  test_gui.py  umlgraph.py
